--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "husky": "^2.2.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.17.0"
