--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "cypress": "^3.4.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-cypress": "^2.6.1",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -39,10 +41,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
     "clean": "rm -rf node_modules/ && npm install",
-    "lint": "eslint 'src/'; exit 0",
-    "lint:fix": "eslint --fix 'src/'; exit 0",
-    "format": "prettier --write 'src/**/*.js'"
+    "lint": "eslint './**/*.js'; exit 0",
+    "lint:fix": "eslint --fix './**/*.js'; exit 0",
+    "format": "prettier --write './**/*.js'"
   },
   "husky": {
     "hooks": {
